feat: added new lexicon DepecheMood + reconfigured weights a bit